continuation of code hw

--- a/hw 2.1/index.html
+++ b/hw 2.1/index.html
@@ -6,9 +6,39 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hw Block2</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="father">
 
+    <div class="cardone">
+        <div class="descr">
+            <h2>Responsive Design</h2>
+            <p>Flat bootstrap responsive our services box free download. Download and use it.</p>
+        </div>
+    <div class="button-first">
+        <button>Learn more</button>
+    </div>
+    </div>
+
+
+<div class="cardtwo">
+    <h2>User interface Style</h2>
+    <p>Flat bootstrap responsive our services box free download. Download and use it.</p>
+    <div class="button-first">
+        <button>Learn more</button>
+    </div>
+</div>
+
+
+<div class="cardthree">
+    <h2>Web Development for you</h2>
+    <p>Flat bootstrap responsive our services box free download. Download and use it.</p>
+    <div class="button-first">
+        <button>Learn more</button>
+    </div>
+</div>
+
+</div>
 </body>
 </html>
