--- a/hw4/index.html
+++ b/hw4/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div class="main">
+<div class="parents">
 <div class="a">
     <h1>A</h1>
 </div>
